[tool.poetry]
name = "GDBot"
version = "0.1.0"
description = "A all-in-one bot for the GDB discord server"
authors = ["SpaceMonk <gamedevsbasement@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
dotenv = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
